src/test/ui/lub-glb/old-lub-glb-object.stderr
error[E0308]: mismatched types
  --> $DIR/old-lub-glb-object.rs:10:13
   |
LL |       let z = match 22 { //~ ERROR E0308
   |  _____________^
LL | |         0 => x,
LL | |         _ => y,
LL | |     };
   | |_____^ one type is more general than the other
   |
   = note: expected type `dyn for<'a, 'b> Foo<&'a u8, &'b u8>`
              found type `dyn for<'a> Foo<&'a u8, &'a u8>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
